--- a/src/html/partials/faq.html
+++ b/src/html/partials/faq.html
@@ -18,6 +18,28 @@
                     </div>
                     <div class="faq__item">
                         <button class="faq__question" aria-expanded="false">
+                            <span>Что входит в стоимость строительства под чистовую отделку?</span>
+                            <svg class="faq__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </button>
+                        <div class="faq__answer">
+                            <p>В стоимость строительства под чистовую отделку входит: фундамент, возведение коробки (стены, перекрытия, кровля), все инженерные системы (электрика, водопровод, канализация, отопление), установка окон и дверей, черновая отделка (штукатурка, стяжка пола, подготовка стен). Чистовая отделка (плитка, обои, покраска, напольные покрытия) выполняется самостоятельно или отдельным договором.</p>
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <button class="faq__question" aria-expanded="false">
+                            <span>Что входит в стоимость строительства коробки?</span>
+                            <svg class="faq__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                        </button>
+                        <div class="faq__answer">
+                            <p>В стоимость строительства коробки входит: фундамент (включая земляные работы и гидроизоляцию), возведение стен (материал и кладка), межэтажные перекрытия, стропильная система и кровля. Коробка представляет собой закрытый контур дома без инженерных систем, отделки, окон и дверей. Это базовая стадия строительства, после которой можно продолжить работы поэтапно.</p>
+                        </div>
+                    </div>
+                    <div class="faq__item">
+                        <button class="faq__question" aria-expanded="false">
                             <span>Как происходит оплата? Можно ли рассрочку?</span>
                             <svg class="faq__icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
