--- a/src/html/partials/head.html
+++ b/src/html/partials/head.html
@@ -102,4 +102,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&family=Playfair+Display:wght@700;800&family=Cinzel:wght@600;700;800&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Яндекс Карты API -->
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" defer></script>
 </head>
