--- a/src/html/partials/map.html
+++ b/src/html/partials/map.html
@@ -1,6 +1,10 @@
 <!-- MAP - Карта объектов -->
         <!-- ============================================ -->
         <section class="map" id="map">
+            <div class="map__image-wrapper">
+                <img src="images/backgrounds/map-background.png" alt="" class="map__image" loading="lazy">
+                <div class="map__overlay"></div>
+            </div>
             <div class="map__container">
                 <h2 class="map__title">Карта объектов</h2>
                 <p class="map__subtitle">Наши построенные и строящиеся дома на карте Белгорода и области</p>
